# LibraryTask

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  task_description.docx
brokers/: rabbitmq.py  redis.py
configs/: database.py  logger.py  minio_s3.py  settings.py
dependencies/: auth_dependencies.py  db_dependency.py  minio_s3_dependency.py  redis_dependency.py  usecase_dependencies.py
exception_handlers/: auth_exc_handlers.py  author_exc_handlers.py  book_exc_handlers.py  db_exc_handlers.py  genre_exc_handlers.py  minio_s3_exc_handlers.py  user_exc_handlers.py
migrations/: env.py
migrations/versions/: 2024_12_03_1305-ca7ea9f0d529_all_tables.py  2024_12_06_1514-91978eab6776_all_tables.py  (+2 more)
models/: __init__.py  author.py  base.py  book.py  discount_enum.py  genre.py  loan.py  order.py  penalty_enum.py  reader.py  user.py  user_role_enum.py
repositories/: abstract_repositories.py  author_repository.py  book_instance_repository.py  book_repository.py  genre_repository.py  minio_s3_repository.py  user_repository.py
routers/: auth_routes.py  author_routes.py  book_instance_routes.py  book_routes.py  genre_routes.py  user_routes.py
schemas/: auth_schemas.py  author_schemas.py  book_schemas.py  common_circular_schemas.py  genre_schemas.py  order_schemas.py  reader_schemas.py  user_schemas.py
tests/: conftest.py
tests/unit/: conftest.py  (+7 more)
usecases/: auth_usecases.py  author_usecases.py  book_instance_usecases.py  book_usecases.py  genre_usecases.py  minio_s3_usecases.py  user_usecases.py
(+7 files in other folders)
