[tool.poetry]
name = "librarytask"
version = "0.1.0"
description = ""
authors = ["Igor Kartel <igor.v.kartel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
aiofiles = "^24.1.0"
aiohttp = "^3.10.10"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
bcrypt = "4.0.1"
cryptography = "^44.0.0"
build = "^1.2.2.post1"
docutils = "^0.21.2"
dill = "^0.3.9"
dnslib = "^0.9.25"
iniconfig = "^2.0.0"
jmespath = "^1.0.1"
passlib = "^1.7.4"
pluggy = "^1.5.0"
plux = "^1.12.1"
psutil = "^6.1.0"
psycopg2-binary = "^2.9.10"
pyaes = "^1.6.1"
pyasn1 = "^0.6.1"
pyjwt = "^2.9.0"
pyotp = "^2.9.0"
pytest = "^8.3.3"
pytest-asyncio = "0.25.0"
pytest-cov = "^6.0.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
rsa = "^4.9"
semver = "^3.0.2"
tabulate = "^0.9.0"
tailer = "^0.4.1"
wrapt = "^1.16.0"
aioboto3 = "^13.2.0"
redis = "^5.2.0"
aio-pika = "^9.4.3"
pillow = "^11.0.0"

[tool.black]
line-length = 109
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
